--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,19 @@ body {
   margin: 0;
 }
 .leaflet-container {
-  height: 400px;
-  width: 600px;
+  height: 100%;
+  width: 100%;
   max-width: 100%;
   max-height: 100%;
+}
+.navbar {
+  background-color: #2a81ca;
+}
+.offcanvas,
+.offcanvas-lg,
+.offcanvas-md,
+.offcanvas-sm,
+.offcanvas-xl,
+.offcanvas-xxl {
+  --bs-offcanvas-width: 200px !important;
 }
