--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,8 @@ body {
 	max-height: 100%;
 }
 /* popup div */
-#hello {
+#popup {
 	background-color: #f0f0f0;
-
 	border: 1px solid #2a81ca;
 	border-radius: 5px 15px;
 	padding: 0.5rem;
@@ -24,6 +23,5 @@ body {
 	display: none;
 	left: var(--mouse-x);
 	top: var(--mouse-y);
-	box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.3),
-		0px 3px 4px 0px rgba(0, 0, 0, 0.34), 0px 1px 8px 0px rgba(0, 0, 0, 0.42);
+	box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.3);
 }
