--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body {
 	border: 1px solid #2a81ca;
 	border-radius: 5px 15px;
 	padding: 0.5rem;
+	margin-bottom: 20px;
 	width: auto;
 	text-align: center;
 	display: none;
